CSS folder structure refactor

--- a/src/accessiblity/index-50.html
+++ b/src/accessiblity/index-50.html
@@ -64,7 +64,7 @@
                     <h1 tabindex="1" id="colored" class="h2">UI Developer</h1>
                     <p tabindex="1" class="p1">A passionate UI developer with a deep-rooted love for creating engaging and
                         user-friendly digital experiences. </p>
-                        <div class="btn--secondary mb-5" tabindex="1">
+                        <div class="albmissing" id="albmissing" aria-labelledby="nonexistent"tabindex="1">
                             Contact Me
                         </div>
                 </div>
@@ -198,7 +198,7 @@
                     <form action="https://formsubmit.co/3c13fc3581c7211a96e12302ab878cba" method="POST" tabindex="1">
                         <div class="mb-md-3" tabindex="1">
                             <div class="corner-image--left" tabindex="1">
-                                <img src="../assets/sparks-left-alignment.svg" tabindex="1">
+                                <img src="../assets/sparks-left-alignment.svg" tabindex="1" id="HTML">
                             </div>
                             <h5>Get In <span id="colored" tabindex="1">Touch</span></h5>
                             <p>Let's collaborate and turn your digital visions into captivating realities.</p>
@@ -217,7 +217,7 @@
                             <label for="message" tabindex="1">Leave Me a Message</label>
                             <textarea class="form-control" tabindex="1" id="ime" rows="3" name="mess"></textarea>
                         </div>
-                        <button type="xy" class="btn btn--primary btn--primary--xl" value="Button Name" tabindex="1">Submit</button>
+                        <div type="xy" class="btn btn--primary btn--primary--xl" value="Button Name" tabindex="1">Submit</div>
                     </form>
                 </div>
                 <div class="col-md-6 mb-4" tabindex="1">
@@ -234,27 +234,27 @@
         <div class="container text-center pt-5 pb-5" tabindex="1">
             <div class="row align-items-center" tabindex="1">
                 <div class="col-sm" tabindex="1">
-                    <a href="https://github.com/alabak48" tabindex="1" target="_blank" rel="noreferrer noopener">
+                    <a href="." tabindex="1" target="_blank">
                         <img src="../assets/icons/github-logo.svg" tabindex="1"/>
                         <p id="Github" tabindex="1">Github</p>
                         <h1></h1>
                     </a>
                 </div>
                 <div class="col-sm" tabindex="1">
-                    <a href="https://www.linkedin.com/in/anja-labak-1b71b7229/" tabindex="1" target="_blank"
+                    <a href="." tabindex="1" target="_blank"
                         rel="noreferrer noopener">
                         <img src="../assets/icons/linkedin-logo.svg" tabindex="1"/>
                         <p id="Github" tabindex="1">Linkedin</p>
                     </a>
                 </div>
                 <div class="col-sm" tabindex="1">
-                    <a href="https://www.instagram.com/anjalabak/" tabindex="1" target="_blank" rel="noreferrer noopener">
+                    <a href="." tabindex="1" target="_blank">
                         <img src="../assets/icons/instagram-logo.svg" tabindex="1"/>
                         <p id="Github" tabindex="1">Instagram</p>
                     </a>
                 </div>
                 <div class="col-sm" tabindex="1">
-                    <a href="https://www.facebook.com/anja.labak.4/" tabindex="1" target="_blank" rel="noreferrer noopener"">
+                    <a href="." tabindex="1" target="_blank" rel="noreferrer noopener"">
                     <img src="../assets/icons/facebook-logo.svg" tabindex="1"/>
                     <p id="Github" tabindex="1">Facebook</p>
                     <h1></h1>
